--- a/podpolie/css/media.css
+++ b/podpolie/css/media.css
@@ -1,8 +1,10 @@
 /*==========  Desktop First Method  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px) {
-
+@media only screen and (max-width : 1400px) {
+.menu__section__bot{
+	bottom: -150px;
+}
 }
 
 /* Medium Devices, Desktops */
