--- a/podpolie/css/media.css
+++ b/podpolie/css/media.css
@@ -19,7 +19,9 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
-
+h1,h2,h3,h4,h5,h6,p{
+	font-weight: 100 !important;
+}
 }
 
 /* Custom, iPhone Retina */
