--- a/e-powers/css/style.css
+++ b/e-powers/css/style.css
@@ -723,11 +723,16 @@ form+p {
         -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     }
-    .form-inline.form-flex .form-group {
-        -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-        flex-grow: 1;
+    .form-inline.form-flex .form-group{
+       display: inline-block;
+       width: 200px;
     }
+    ,
+    .form-inline.form-flex button{
+        width: 100px;
+        margin-top: 0;
+        height: 48px;
+    } 
     .form-inline.form-flex .form-group .form-control {
         width: 100%;
     }
@@ -956,7 +961,7 @@ form .btn {
         margin: 0;
         padding-top: 0;
         padding-bottom: 0;
-        height: 50px;
+        height: 48px;
         line-height: 47px;
         margin-left: -1px;
         margin-top: -1px;
